Login Through a Web Browser

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BlindTify</string>
+    <string name="token">Access Token: %1$s</string>
+    <string name="warning_need_token">You need to request an access token first</string>
 </resources>
